--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ itsdangerous==2.0.1
 jinja2==3.0.1
 markupsafe==2.0.1
 prettytable==2.1.0
+pystache==0.5.4
+requests-toolbelt==0.9.1
 requests==2.26.0
 urllib3==1.26.6
 wcwidth==0.2.5
